--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cynosure",
+  "name": "vector",
   "version": "0.1.0",
   "description": "A radix tree based routing library for Node.js",
   "main": "./src/index.ts",
@@ -8,21 +8,27 @@
     "dev": "nodemon",
     "format": "prettier --ignore-path .gitignore --write \"**/*.+(js|ts|json)\"",
     "lint": "eslint --ignore-path .eslintignore,.gitignore --ext .js,.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "GPLv3",
   "devDependencies": {
+    "@babel/preset-env": "^7.23.9",
+    "@babel/preset-typescript": "^7.23.3",
+    "@jest/globals": "^29.7.0",
     "@total-typescript/ts-reset": "^0.5.1",
+    "@types/jest": "^29.5.11",
     "@types/module-alias": "^2.0.4",
     "@types/node": "^20.10.6",
     "@typescript-eslint/eslint-plugin": "^6.17.0",
     "@typescript-eslint/parser": "^6.17.0",
     "eslint": "^8.56.0",
     "eslint-config-prettier": "^9.1.0",
+    "jest": "^29.7.0",
     "nodemon": "^3.0.2",
     "prettier": "^3.1.1",
+    "ts-jest": "^29.1.2",
     "ts-node": "^10.9.2",
     "tsc-alias": "^1.8.8",
     "tsconfig-paths": "^4.2.0",
